Temp checkin assessment
