# src/app/api/model/assessmentStoreRequest.ts
@@ -13,6 +13,7 @@ import { Type, Expose } from 'class-transformer';
 // @dynamic
 
 import { AssessmentLifecycleStatus } from './assessmentLifecycleStatus';
+import { RiskResponseLifecycleStatus } from './riskResponseLifecycleStatus';
 
 import { Observable }                                        from 'rxjs';
 import { AbstractControl, FormControl, FormGroup, FormArray, Validators }                            from '@angular/forms';
@@ -42,6 +43,13 @@ export class AssessmentStoreRequest {
      */
     @Expose()
     asset_id: number | undefined;
+    /**
+     * Risk Response name of the Assessment
+     */
+    @Expose()
+    risk_response_name!: string;
+    @Expose()
+    risk_response_lifecycle_status!: RiskResponseLifecycleStatus;
 
     /**
      * Description: Name of the new Assessment
@@ -75,6 +83,17 @@ export class AssessmentStoreRequest {
      * datatypeWithEnum: number
      * asset_id: number   
      */
+    /**
+     * Description: Risk Response name of the Assessment
+     * datatype: string
+     * datatypeWithEnum: string
+     * risk_response_name: string   
+     */
+    /**
+     * datatype: RiskResponseLifecycleStatus
+     * datatypeWithEnum: RiskResponseLifecycleStatus
+     * risk_response_lifecycle_status: RiskResponseLifecycleStatus   
+     */
 
     // validations?: Map<string, Array<{[key: string]: string}>> = new Map<string, Array<{[key: string]: string}>>();
 
@@ -91,8 +110,12 @@ export class AssessmentStoreRequest {
                     init.system_group_id ? this.system_group_id = init.system_group_id : null,
                
             
-                    init.asset_id ? this.asset_id = init.asset_id : null
+                    init.asset_id ? this.asset_id = init.asset_id : null,
                
+            
+                    init.risk_response_name ? this.risk_response_name = init.risk_response_name : null,
+               
+                        init.risk_response_lifecycle_status ? this.risk_response_lifecycle_status = init.risk_response_lifecycle_status : null
     }
 
     static   getForm(data?: AssessmentStoreRequest | AssessmentStoreRequest[] | null): FormGroup {
@@ -130,7 +153,9 @@ export class AssessmentStoreRequest {
                         lifecycle_status: new FormControl(data?.lifecycle_status, []),
                         company_id: new FormControl(data?.company_id, [Validators.pattern('^[0-9]*$')]),
                         system_group_id: new FormControl(data?.system_group_id, [Validators.pattern('^[0-9]*$')]),
-                        asset_id: new FormControl(data?.asset_id, [Validators.pattern('^[0-9]*$')])
+                        asset_id: new FormControl(data?.asset_id, [Validators.pattern('^[0-9]*$')]),
+                        risk_response_name: new FormControl(data?.risk_response_name, []),
+                        risk_response_lifecycle_status: new FormControl(data?.risk_response_lifecycle_status, [])
         });
     }
   
